<resources>
    <string name="app_name">Inventory App</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="hint_book_title">Title</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_price">Price €</string>
    <string name="hint_book_quantity">In Stock Quantity</string>
    <string name="hint_book_supplier_name">Supplier Name</string>
    <string name="hint_book_supplier_phonenumber">Supplier Phonenumber</string>
    <string name="save_button">Save</string>
</resources>
