<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">


    <!-- Title field -->
    <EditText
        android:id="@+id/edit_book_title"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_title"
        android:inputType="textCapWords" />

    <!-- Author field -->
    <EditText
        android:id="@+id/edit_book_author"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_author"
        android:inputType="textCapWords" />

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_book_price"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_price"
        android:inputType="textCapWords" />

    <!-- Quantity field -->
    <EditText
        android:id="@+id/edit_book_quantity"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_quantity"
        android:inputType="textCapWords" />

    <!-- Supplier Name field -->
    <EditText
        android:id="@+id/edit_book_supplier_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_supplier_name"
        android:inputType="textCapWords" />

    <!-- Supplier Phonenumber field -->
    <EditText
        android:id="@+id/edit_book_supplier_phonenumber"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_supplier_phonenumber"
        android:inputType="textCapWords" />


</LinearLayout>